<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/main_ui_title_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/btn_container_homepage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_homepage"
                    style="@style/BottomTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/bottom_homepage_selector"
                    android:onClick="onTabClicked"
                    android:text="@string/homepage"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_category"
                    style="@style/BottomTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onTabClicked"
                    android:drawableTop="@drawable/bottom_category_selector"
                    android:text="@string/category"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container_shoppingcart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_shoppingcart"
                    style="@style/BottomTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/bottom_shoppingcart_selector"
                    android:onClick="onTabClicked"
                    android:text="@string/shoppingcart"/>
                <TextView
                    android:id="@+id/unread_msg_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:visibility="invisible" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_container_mine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_mine"
                    style="@style/BottomTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/bottom_mine_selector"
                    android:onClick="onTabClicked"
                    android:text="@string/mine"/>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_above="@id/main_bottom"
            android:background="@color/line_color"/>

        <RelativeLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/line_view"
            android:background="@color/white"/>

    </RelativeLayout>

</LinearLayout>